--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
     </div>
 
     <!-- TODO -->
-    <div class="no-underline text-sm text-white">
+    <div class="no-underline text-[10px] text-white">
       Challenge by
       <a
         class="text-black"
         href="https://www.frontendmentor.io?ref=challenge"
         target="_blank"
         >Frontend Mentor</a
-      >. Coded by
+      > Coded by
       <a class="text-black" href="https://github.com/techie084"
-        >Wisdom Matthew</a
+        >Boy Techie 🤸🤍</a
       >
     </div>
   </body>
